--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <div class="footer">
     <div class="circle"></div>
     <h6>
-        Fearful Harmony is both an exploration of the relationship between designer and machine as a means to delve into a different aesthetic and experience of our devices.</h6></div>      
+        Fearful Harmony is an exploration of the relationship between designer and machine, speculating into the being of the latter as a means to delve into a different aesthetic and experience of our devices.</h6></div>      
       
       </div>
   </main>     
