--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <!-- Apple -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/favicon58.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="180x180" href="/assets/favicon58.png" />   
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="" />
+    <link rel="apple-touch-icon-precomposed" sizes="180x180" href="" />   
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="styles/main.css"/>
