--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="content-language" content="en"/>
-    <meta name="description" content="An explosion ripped through the remote Pike River mine on the West Coast of the South Island, killing 29 men.">
+    <meta name="description" content="">
     <meta name="author" content="Luke Hoban">
 
     <!-- Mobile -->
@@ -16,8 +16,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1, shrink-to-fit=no">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/assets/favicon30.png" sizes="30x30" />
-    <link rel="icon" type="image/png" href="/assets/favicon58.png" sizes="58x58" />
+    <link rel="icon" type="image/png" href="" sizes="30x30" />
+    <link rel="icon" type="image/png" href="" sizes="58x58" />
 
     <!-- Apple -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
