--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
         </h1>
       </div>
         
-    <video class="landing-video" src="assets/2.mp4" autoplay="" loop="" playsinline="">
+    <video class="landing-video" src="assets/foreground.mp4" autoplay="" loop="" playsinline="">
     Sorry, your browser doesn't support embedded videos.
     </video>
 
-    <video class="landing-video2" src="assets/1.mp4" autoplay="" loop="" playsinline="">
+    <video class="landing-video2" src="assets/background.mp4" autoplay="" loop="" playsinline="">
     Sorry, your browser doesn't support embedded videos.
     </video>
       
