--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ void main() {
 <div class="homepage-footer">
     <div class="h6-circle"></div>
     <h6>
-        Fearful Harmony is an exploration of the relationship between designer and machine, speculating into the being of the latter as a means to delve into a different aesthetic and experience of our devices. <b>More content coming soon.</b>
+        Fearful Harmony is an exploration of the relationship between designer and machine, speculating into the being of the latter as a means to delve into a different aesthetic and experience of our devices. <span class=underline>More content coming soon.</span>
               <br><br>© 2017 <a class="underline" href="http://alfredhoi.com/" target="_blank">Alfred Hoi</a> & <a class="underline" href="http://lukehoban.co.nz/" target="_blank">Luke Hoban</a>, All Rights Reserved  </h6></div>      
       
       </div>  
