--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ void main() {
       
   </main>     
 
-    <script type="text/javascript" src="js/index.js"></script> 
+<!--    <script type="text/javascript" src="js/index.js"></script> -->
     
     <script>
 
