--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ void main() {
 <!--    <script type="text/javascript" src="js/index.js"></script> -->
     
     <script src="js/background.js"></script> 
-<!--        <canvas id="background" width="250" height="150"></canvas>-->
+        <canvas id="background" width="250" height="150">
         
 </body>
 </html>
