--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
     <!-- Mobile -->
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1, shrink-to-fit=no">
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1, shrink-to-fit=no">-->
+    <meta name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="" sizes="30x30" />
