--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		
-
 
     <title>Fearful Harmony</title>
 
@@ -36,11 +34,12 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.7.0/pixi.js"></script>
 
     </head>
+    
     <body>
 
-<script id="shader" type="shader-code">
+        <script id="shader" type="shader-code">
 
-        precision mediump float;
+        precision highp float;
             uniform vec2      mouse;
             uniform vec2      resolution;
             uniform float     time;
