--- a/ok-human.html
+++ b/ok-human.html
@@ -79,7 +79,7 @@ precision highp float;
             const vec3 c5 = vec3(4.5);
             const vec3 c6 = vec3(0.9);
 
-            vec2 p = gl_FragCoord.xy * 0.2 / resolution.xx;
+            vec2 p = gl_FragCoord.xy * 0.35 / resolution.xx;
 
             float q = fbm(p - (time + 0.7));
 
@@ -128,7 +128,7 @@ precision highp float;
                 <div class="h6-circle"></div>
                 <h6>
                 Fearful Harmony is an exploration of the relationship between designer and machine, speculating into the being of the latter as a means to delve into a different aesthetic and experience of our devices.
-                <br><br>© 2017 <a class="underline" href="http://alfredhoi.com/" target="_blank">Alfred Hoi</a> &amp; <a class="underline" href="http://lukehoban.co.nz/" target="_blank">Luke Hoban</a>, All Rights Reserved  </h6>
+                <br><br>© 2017 <a class="underline" href="http://alfredhoi.com/" target="_blank">Alfred Hoi</a> &amp; <a class="underline" href="http://lukehoban.co.nz/" target="_blank">Luke Hoban</a>, All Rights Reserved.</h6>
             </div> 
             <div class="menu-close"><h6 id="menu-open" class="underline"><a></a>Close</h6></div>
         </div>        
@@ -205,8 +205,11 @@ precision highp float;
         <h6><b>Artist</b>: Nam June Paik 1932-2006<br>
         <b>Date</b>: 2002<br>
         <b>Classification</b>: Installation<br>
+        <b>Photo</b>: Erich Koyama. Courtesy Gagosian Gallery, Hong Kong.<br>    
         <b>Object</b>: 1200 x 920 x 205 mm<br>
-        <b>Medium</b>: Video, 5 monitors and radios</h6>  
+        <b>Medium</b>: Video, 5 monitors and radios<br>
+        <b>Copyright</b>: Nam June Paik Estate
+        </h6>  
             <div class="small-rule"></div> 
         <h6><b>Gallery label</b>, February 2016<br>Paik was fascinated by the figure of the robot, and created his first radio-controlled robot in 1964. This later work is a sculptural figure constructed using nine vintage Bakelite radios, which the artist acquired from thrift stores and markets. Bakelite was an early heat-resistant plastic that was commonly used for domestic electrical goods and childrens’ toys in the 1930s and early 1940s. Paik has customised the radios to incorporate specially compiled video footage. Their archaic quality harks back to an era when global communications technology was just beginning to become part of everyday life.
         </h6>        
@@ -220,7 +223,7 @@ precision highp float;
             </figure>    
         </article>     
         <div class="nam-june-paik">
-            <h6><b>Tate Modern</b>, Nam June Paik</h6>
+            <h6><b>Tate Modern</b>, Nam June Paik. Photo by Judit Szeifert</h6>
                 <h3>Nam June <span>P</span>aik
                 <br>Bakelite <span>R</span>obot, 2002</h3>
         <div class="nam"> 
@@ -230,7 +233,7 @@ precision highp float;
         </div>     
         <div class="nam-june-paik-body-copy">
             <h5><b>Hannah Dewar</b><br>
-            May 2013<br>
+            May 2013, <a target="_blank" class="underline" href="https://www.tate.org.uk/art/artworks/paik-bakelite-robot-t14340">source</a><br>
             Bakelite Robot is a smaller than life-size sculpture of a robot constructed from nine vintage Bakelite radios. The radios, which are black, red and orange in colour, are joined together in a humanoid shape that includes a head, torso, arms and legs. The dials on the front of four of the radios have been removed, creating hollow circular spaces into which LCD television monitors have been inserted. These television monitors screen videotape specifically developed for the artwork, composed of footage from robot and science fiction films, recordings of vintage robot toys and footage from earlier video edits. Although the sculpture takes the form of a robot, it is not animated. An impression of the robot’s ‘movement’ is instead given by the video footage playing on the screens, which are situated on the hands, knee and hip of the robot.</h5>
             <h5>
             Bakelite Robot was produced in 2002, late in Nam June Paik’s career, when the artist was working in New York. Acquired from thrift stores and markets, the radios in Bakelite Robot have a vintage appearance. Bakelite had been developed by Belgian-born chemist Leo Baekland in New York in 1907 and was one of the earliest plastics to be introduced into the modern home. It was favoured for its heat-resistant properties, electrical non-conductivity and the fact that it was inexpensive and hard-wearing, and was used in a number of products including radio and telephone casings, kitchenware and children’s toys–a fact referenced by Paik in his Bakelite Robot and its footage.</h5>
@@ -253,12 +256,12 @@ precision highp float;
     </div>
     </section> 
 </div>        
-<footer>             
-     <article class="col-12 footer-img">
+<footer>              
+     <article class="col-12">
       <figure>
         <img src="assets/images/fearful-harmony/manifesto.jpg" alt="">
       </figure>    
-  </article>    
+  </article>          
 <div class="footer-context">
           </div>  
     <div class="footer-credit">
@@ -267,11 +270,11 @@ precision highp float;
         Fearful Harmony is both an exploration of the relationship between designer and machine as a means to delve into a different aesthetic and experience of our devices.</h6>
           <h6><br>
         Thank you to everyone who was involved and helped on the way. A special acknowledgement to Lee Jensen and Tristam Sparks for the guidance and mentorship throughout the year. 
-        <br><br>© 2017 <a class="underline" href="http://alfredhoi.com/" target="_blank">Alfred Hoi</a> & <a class="underline" href="http://lukehoban.co.nz/" target="_blank">Luke Hoban</a> All Rights Reserved  </h6>
+        <br><br>© 2017 <a class="underline" href="http://alfredhoi.com/" target="_blank">Alfred Hoi</a> &amp; <a class="underline" href="http://lukehoban.co.nz/" target="_blank">Luke Hoban</a>, All Rights Reserved.</h6>
           </div>        
-        <h1 class="footer-header" id="hover-arrow"><a class="footer-link" >BACK<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1067.03 1067.03"><defs><style>.cls-1{fill:none;}.cls-2{fill:#000000;}</style></defs><title>arrow_3</title><g id="Layer_2" data-name="Layer 2"><g id="containter"><rect class="cls-1" width="1067.03" height="1067.03"/></g><g id="arrow-tail"><path class="cls-2" d="M564.65,306H391.11V244.73H564.65Z"/></g><g id="arrow-body"><path class="cls-2" d="M158,578.23H568.15c93.1,0,150.43-46.08,150.43-136.1,0-92.08-57.33-136.11-150.43-136.11H533.56V244.73h45.85c123.78,0,208.64,70.55,208.64,197.4,0,125.82-84.86,197.39-208.64,197.39H158Z"/></g><g id="arrow-tip"><polygon class="cls-2" points="511.3 578.23 511.3 639.52 198.77 639.52 198.77 734.7 31 608.87 198.77 483.05 198.77 578.23 511.3 578.23"/></g></g></svg></a>
+        <h1 class="footer-header" id="hover-arrow"><span class="footer-link">BACK<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1067.03 1067.03"><defs><style>.cls-1{fill:none;}.cls-2{fill:#000000;}</style></defs><title>arrow_3</title><g id="Layer_2" data-name="Layer 2"><g id="containter"><rect class="cls-1" width="1067.03" height="1067.03"/></g><g id="arrow-tail"><path class="cls-2" d="M564.65,306H391.11V244.73H564.65Z"/></g><g id="arrow-body"><path class="cls-2" d="M158,578.23H568.15c93.1,0,150.43-46.08,150.43-136.1,0-92.08-57.33-136.11-150.43-136.11H533.56V244.73h45.85c123.78,0,208.64,70.55,208.64,197.4,0,125.82-84.86,197.39-208.64,197.39H158Z"/></g><g id="arrow-tip"><polygon class="cls-2" points="511.3 578.23 511.3 639.52 198.77 639.52 198.77 734.7 31 608.87 198.77 483.05 198.77 578.23 511.3 578.23"/></g></g></svg></span>
         </h1>
-</footer>
+      </footer>
        <div class="footer-background"></div>
       </div>
   </main>
