--- a/static-haze.html
+++ b/static-haze.html
@@ -32,7 +32,7 @@
     <script type="text/javascript" src="js/jquery-2.2.2.min.js"></script>
     <script type="text/javascript" src="js/flickity.pkgd.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.5.1/pixi.js"></script> 
-    <script type="text/javascript" src="js/jquery.smoothState.js"></script>  
+
 
     </head>
     <body>
@@ -158,34 +158,13 @@ precision highp float;
 -->
         <h5>
         <span></span><span></span><span></span>Narrative, Themes.<br> 
-        Finally alone, the machine is able to rest from the constant activity of its user. In its sleep, it dreams aloud, perhaps of electric sheep and at last, the machine enters into a state of bliss. Then it jolts back into function when confronted by the user, suddenly being expected to perform like it usually does. But it can’t for it just awoke and, still tired, the machine slowly enters into a state of malfunction. Perhaps we should just let our machines rest a little more. Or perhaps we should learn to be less harsher on them, as it’s simply in a state where it can’t function properly at the moment. But give it time and it will. In the meantime, just enjoy the show.<br>
+        Finally alone, the machine is able to rest from the constant activity of its user. In its sleep, it dreams aloud, perhaps of electric sheep and at last, the machine enters into a state of bliss. Then it jolts back into function when confronted by the user, suddenly being expected to perform like it usually does. But it can’t for it just awoke and, still tired, the machine slowly enters into a state of malfunction. Perhaps we should just let our machines rest a little more. Or perhaps we should learn to be less harsh on them, as it’s simply in a state where it can’t function properly at the moment. But give it time and it will. In the meantime, just enjoy the show.<br>
         Purpose, Intended Outcomes.<br>
         <span></span><span></span><span></span>
-        Static Haze speculates on how the machine perceives and, in turn, communicates itself once woken up by the user during its state of rest. Blurring the line between function and malfunction, our intent was to aestheticise the latter in order to embrace it’s imperfections; to be delighted and excited as opposed to being frustrated. In the exploration of the machine as this being, we were interested in the transition of states from being asleep to suddenly being woken up as a metaphor to describe our attitudes of the machine. We abruptly bring them to function at will, without thinking about their state of being, yet when they malfunction, we become frustrated at them when, potentially, we only have ourselves to blame.<br>
+        Static Haze speculates on how the machine perceives and, in turn, communicates itself once woken up by the user during its state of rest. Blurring the line between function and malfunction, our intent was to aestheticise the latter in order to embrace its imperfections; to be delighted and excited as opposed to being frustrated. In the exploration of the machine as this being, we were interested in the transition of states from being asleep to suddenly being woken up as a metaphor to describe our attitudes of the machine. We abruptly bring them to function at will, without thinking about their state of being, yet when they malfunction, we become frustrated at them when, potentially, we only have ourselves to blame.<br>
         Rationale, Technical Process.
         <br>
-        <span></span><span></span><span></span>Interested in how image could be interpreted as soundby the machine, this became the focus of our experiment as a means to show how information sent to the machine could be
-        interpreted in different ways. Yet over time we began to contextualise this within the performance of malfunction from the machine. Using ‘Max 7’, a visual coding program, we were able to sought out an experience that could convert the video from
-        a camera feed into a static sound and visual. The video feed
-        is converted into grayscale not only as a way to relate back to
-        the graphic identity of Fearful Harmony, but also to simplify the process of converting the image into sound. The way Max 7
-        interprets the video of a camera feed into the static experience is by taking a column of pixels and analysing its grayscale value and further interpreting it as a frequency to play as sound. As a visual, it then takes the column of pixels and stretches it across the screen. Using FaceOSC, a facial recognition program, we made it so that upon the machine
-        recognising a human face, it would slowly distort
-        and manipulate the user’s face until it fully turned
-        into a static experience. But to make the transformation
-        clear that it triggered upon detecting a human
-        face, we needed a previous state, hence the
-        ‘sleeping state’. In this state, white lines would appear
-        alongside a tune, which was generated from an image of a sheep, which we then manipulated
-        to make it sound as if the machine was sleeping.
-        In fact, if you play this tune on a spectrogram you
-        can faintly see an image of a sheep. The purpose
-        of creating a sleep state was not only to make the
-        experience clearer that it triggered upon facial
-        recognition, but also to explore the being of the
-        machine, speculating how it would fall asleep and
-        how that could be experienced, while further justifying
-        the distortion that would occur once woken.<br><br></h5>   
+        <span></span><span></span><span></span>Interested in how image could be interpreted as sound by the machine, this became the focus of our experiment as a means to show how information sent to the machine could be interpreted in different ways. Yet over time we began to contextualise this within the performance of malfunction from the machine. Using ‘Max 7’, a visual coding program, we were able to sought out an experience that could convert the video from a camera feed into a static sound and visual. The video feed is converted into grayscale not only as a way to relate back to the graphic identity of Fearful Harmony, but also to simplify the process of converting the image into sound. The way Max 7 interprets the video of a camera feed into the static experience is by taking a column of pixels and analysing its grayscale value and further interpreting it as a frequency to play as sound. As a visual, it then takes the column of pixels and stretches it across the screen. Using FaceOSC, a facial recognition program, we made it so that upon the machine recognising a human face, it would slowly distort and manipulate the user’s face until it fully turned into a static experience. But to make the transformation clear that it triggered upon detecting a human face, we needed a previous state, hence the ‘sleeping state’. In this state, white lines would appear alongside a tune, which was generated from an image of a sheep, which we then manipulated to make it sound as if the machine was sleeping. In fact, if you play this tune on a spectrogram you can faintly see an image of a sheep. The purpose of creating a sleep state was not only to make the experience clearer that it triggered upon facial recognition, but also to explore the being of the machine, speculating how it would fall asleep and how that could be experienced, while further justifying the distortion that would occur once woken.<br><br></h5>   
     </div>
     </div>
 </section>
@@ -270,7 +249,7 @@ precision highp float;
         <h4>
     <div class="h4-circle"></div>
         <span></span><b>Precedence,</b> Visual Inspiration.<br>
-        <span></span> Ryoji Ikeda, an electronic composer and a visual artist, was our main inspiration for Static Haze. In particular, we looked to his work ‘Test Pattern’ (2008), an audiovisual installation that interprets data and sound into a barcode pattern. Though Ikeda remains relatively quiet as to the purpose of his work, we came to understand Test Pattern as an exploration of the machine transitioning into different states of activities. The idea of states for the machine to transition through then became something that we wanted to explore for Static Haze, taking the experience of Ikeda’s test pattern as a precedent for how our machine should sound and look like when either asleep or awake.</h4>     
+        <span></span> Ryoji Ikeda, an electronic composer and a visual artist, was our maininspiration for Static Haze. In particular, we looked to his work ‘Test Pattern’ (2008), an audiovisual installation that interprets data and sound into a barcode pattern. Though Ikeda remains relatively quiet as to the purpose of his work, we came to understand Test Pattern as an exploration of the machine transitioning into different states of activities. The idea of states for the machine to transition through then became something that we wanted to explore for Static Haze, taking the experience of Ikeda’s test pattern as a precedent for how our machine should sound and look like when either asleep or awake.</h4>     
         </div>
     </div> 
 </section> 
@@ -300,6 +279,8 @@ precision highp float;
 </div>
         
   
+        
+    <script type="text/javascript" src="js/jquery.smoothState.js"></script>    
     <script src="js/background.js"></script>
     <script type="text/javascript" src="js/index.js"></script>         
 </body>
