--- a/static-haze.html
+++ b/static-haze.html
@@ -26,13 +26,20 @@
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="styles/main.css"/>
     <link rel="stylesheet" type="text/css" href="styles/media_queries.css"/>   
-    <link rel="stylesheet" type="text/css" href="styles/flickity.css"/> 
         
     <!-- JS -->
     <script type="text/javascript" src="js/jquery-2.2.2.min.js"></script>
     <script type="text/javascript" src="js/flickity.pkgd.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.5.1/pixi.js"></script> 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123029077-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'UA-123029077-1');
+    </script>
 
     </head>
     <body>
@@ -174,7 +181,7 @@ precision highp float;
         <p><b>Visual Documentation</b><br></p>
         </div>
     <div class="static-haze-rule2"></div>
-    <div class="static-haze-video">
+    <div class="ok-human-video">
         <article class="videoWrapper col-10">
             <iframe src="https://player.vimeo.com/video/239584869" width="640" height="337" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </article>     
@@ -183,7 +190,7 @@ precision highp float;
         <div class="small-rule"></div> 
             <h6><b>Static Haze</b><br></h6>
         <div class="small-rule"></div>    
-        <h6>“The project aims to examine the relationship between critical points of device performance and the threshold of human perception.”</h6>
+        <h6>“Static Haze speculates on how the machine perceives and, in turn, communicates itself once woken up by the user during its state of rest.”</h6>
         <div class="small-rule"></div> 
     </div>
     <div class="static-haze-credit">
