--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
     <!-- JS -->
     <script type="text/javascript" src="js/jquery-2.2.2.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.5.1/pixi.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123029077-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'UA-123029077-1');
+    </script>
     </head>
     <body>
         
@@ -120,10 +128,10 @@
             <a id="fearful-harmony"><span>F</span>earful <span>Ha</span>rmony</a>
                 <div class="big-circle"></div>
                 <br>
-            <a id="static-haze" href="static-haze.html">Static <span>H</span>aze</a>
+            <a id="static-haze" href="static-haze">Static <span>H</span>aze</a>
                 <div class="big-circle2"></div>
                 <br>
-            <indent class="indent-big"><a id="ok-human" href="ok-human.html"><span>OK</span> Human</a></indent>
+            <indent class="indent-big"><a id="ok-human" href="ok-human"><span>OK</span> Human</a></indent>
             <div class="big-circle3"></div>
             </h1>
         </div>
@@ -208,7 +216,7 @@
   </article>  
     <div class="hero-caption">
         <h6>
-        Static Haze speculates on how the machine perceives and, in turn, communicates itself once woken up by the user during its state of rest. <a class="underline"  href="static-haze.html">Read more</a>
+        Static Haze speculates on how the machine perceives and, in turn, communicates itself once woken up by the user during its state of rest. <a class="underline"  href="static-haze">Read more</a>
         </h6>
     </div> 
     <div class="mobile-letter">
@@ -306,9 +314,9 @@
 <!--        <div class="small-rule"></div>-->
             *Helvetica has been slightly edited to make sure the interpolation between the two fonts would function correctly. Small changes such as the tail from the lowercase ‘a’ was removed to ensure there was an equal amount of points as the Arial counterpart.</h6>
         <div class="small-rule"></div>
-        <h4 id="hover-arrow3"><a href="static-haze.html">Static Haze<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1067.03 1067.03"><defs><style>.cls-1{fill:none;}.cls-2{fill:#000000;}</style></defs><title>arrow_3</title><g id="Layer_2" data-name="Layer 2"><g id="arrow-tip"><polygon class="cls-2" points="511.3 578.23 511.3 639.52 198.77 639.52 198.77 734.7 31 608.87 198.77 483.05 198.77 578.23 511.3 578.23"/></g></g></svg></a></h4>
+        <h4 id="hover-arrow3"><a href="static-haze">Static Haze<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1067.03 1067.03"><defs><style>.cls-1{fill:none;}.cls-2{fill:#000000;}</style></defs><title>arrow_3</title><g id="Layer_2" data-name="Layer 2"><g id="arrow-tip"><polygon class="cls-2" points="511.3 578.23 511.3 639.52 198.77 639.52 198.77 734.7 31 608.87 198.77 483.05 198.77 578.23 511.3 578.23"/></g></g></svg></a></h4>
         <div class="small-rule"></div>
-        <h4 id="hover-arrow2"><a href="ok-human.html">OK Human<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1067.03 1067.03"><defs><style>.cls-1{fill:none;}.cls-2{fill:#000000;}</style></defs><title>arrow_3</title><g id="Layer_2" data-name="Layer 2"><g id="arrow-tip"><polygon class="cls-2" points="511.3 578.23 511.3 639.52 198.77 639.52 198.77 734.7 31 608.87 198.77 483.05 198.77 578.23 511.3 578.23"/></g></g></svg></a></h4>
+        <h4 id="hover-arrow2"><a href="ok-human">OK Human<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1067.03 1067.03"><defs><style>.cls-1{fill:none;}.cls-2{fill:#000000;}</style></defs><title>arrow_3</title><g id="Layer_2" data-name="Layer 2"><g id="arrow-tip"><polygon class="cls-2" points="511.3 578.23 511.3 639.52 198.77 639.52 198.77 734.7 31 608.87 198.77 483.05 198.77 578.23 511.3 578.23"/></g></g></svg></a></h4>
       
         <div class="small-rule bottom-10"></div>
     </div>
