--- a/static-haze.html
+++ b/static-haze.html
@@ -116,13 +116,13 @@ precision highp float;
 
         <div class="heading">
             <h1>
-            <a id="fearful-harmony" href="index.html"><span>F</span>earful <span>Ha</span>rmony</a>
+            <a id="fearful-harmony" href="index"><span>F</span>earful <span>Ha</span>rmony</a>
                 <div class="big-circle"></div>
                 <br>
-            <a id="static-haze" href="static-haze.html">Static <span>H</span>aze</a>
+            <a id="static-haze" href="static-haze">Static <span>H</span>aze</a>
                 <div class="big-circle2"></div>
                 <br>
-            <indent class="indent-big"><a id="ok-human" href="ok-human.html"><span>OK</span> Human</a></indent>
+            <indent class="indent-big"><a id="ok-human" href="ok-human"><span>OK</span> Human</a></indent>
             <div class="big-circle3"></div>
             </h1>
         </div>
@@ -196,7 +196,7 @@ precision highp float;
     <div class="static-haze-credit">
         <article class="">
             <figure>
-            <img class="border" src="assets/images/static-haze/3.jpg" alt="">
+            <img class="border" src="assets/images/static-haze/ryoji-ikeda.jpg" alt="">
             </figure>    
         </article> 
     </div>  
