--- a/ok-human.html
+++ b/ok-human.html
@@ -112,13 +112,13 @@ precision highp float;
 
         <div class="heading">
             <h1>
-            <a id="fearful-harmony" href="index.html"><span>F</span>earful <span>Ha</span>rmony</a>
+            <a id="fearful-harmony" href="index"><span>F</span>earful <span>Ha</span>rmony</a>
                 <div class="big-circle"></div>
                 <br>
-            <a id="static-haze" href="static-haze.html">Static <span>H</span>aze</a>
+            <a id="static-haze" href="static-haze">Static <span>H</span>aze</a>
                 <div class="big-circle2"></div>
                 <br>
-            <indent class="indent-big"><a id="ok-human" href="ok-human.html"><span>OK</span> Human</a></indent>
+            <indent class="indent-big"><a id="ok-human" href="ok-human"><span>OK</span> Human</a></indent>
             <div class="big-circle3"></div>
             </h1>
         </div>
