--- a/static-haze.html
+++ b/static-haze.html
@@ -196,7 +196,7 @@ precision highp float;
     <div class="static-haze-credit">
         <article class="">
             <figure>
-            <img class="border" src="assets/images/static-haze/RyojiIkeda-003.jpg" alt="">
+            <img class="border" src="assets/images/static-haze/RyojiIkeda-007.jpg" alt="">
             </figure>    
         </article> 
     </div>  
@@ -218,9 +218,7 @@ precision highp float;
         <b>Classification</b>: Installation<br></h6>  
             <div class="small-rule"></div> 
         <h6><b>Gallery label</b>, DHC/ART Foundation for Contemporary Art is delighted to present Ryoji Ikeda’s first survey exhibition in North America. A fascinating and troubling poet of the digital age, Ikeda’s profound investigations in sound, time, and space have their basis in mathematical methods which result in works of spare, sublime, if occasionally ear-splitting, beauty. Spanning the microscopic to the infinite, his performances, installations, and artworks variously produce sine waves, sound pulses, pixels of light, and numerical data sometimes in extraordinary combinations. The artist has conceived a conceptual counterpoint between DHC/ART’s two buildings: the main space will display framed works, light boxes, sculptural works, and works on paper under the rubric systematics. In the Satellite space Ikeda will present audiovisual projects, orchestrated as a symphonic whole, from the datamatics series which tests the limits of perception by visualizing the invisible data streams which permeate our world.</h6>
-                   <div class="small-rule"></div> 
-        <h6><b>Ryoji Ikeda</b> was born in 1966 in Gifu, Japan. He now lives and works in Paris. He has performed and exhibited worldwide including Australian Centre for the Moving Image, Melbourne; MIT, Boston; Centre Pompidou, Paris; Sónar Festival Barcelona; Tate Modern, London; Irish Museum of Modern Art, Dublin; Auditorium Parco della Musica, Roma; lCC, Tokyo; Art Beijing; Göteborg Biennale; Mutek Festival; and many other electronic music festivals and small DJ clubs.
-        </h6>  
+
 <!--
             <div class="small-rule"></div> 
         <h6><b>Precedence</b></h6>
@@ -231,7 +229,7 @@ precision highp float;
 <section class="precedence">
     <article class="col-12">
       <figure>
-        <img class="border-bottom" src="assets/images/static-haze/RyojiIkeda-001.jpg" alt="">
+        <img class="border" src="assets/images/static-haze/RyojiIkeda-009.jpg" alt="">
       </figure>    
     </article> 
     <div class="ryoji-ikeda">   
@@ -246,7 +244,9 @@ precision highp float;
         <h6><b>Materials:</b> 3 DLP projectors, computers, speakers<br>
         <b>Dimensions:</b> W20.0 x H15.0 x D30.0m (digital projection throw distance: H20.0 m)<br>
         <b>Date/Place:</b> May 20 – June 11, 2011 Park Avenue Armory, New York, United States <br>
-        <b>Credits:</b> Concept, composition: Ryoji Ikeda computer graphics, programming: Tomonaga Tokuyama</h6>
+        <b>Credits:</b> Concept, composition: Ryoji Ikeda computer graphics, programming: Tomonaga Tokuyama</h6>                   <div class="small-rule"></div> 
+        <h6><b>Ryoji Ikeda</b> was born in 1966 in Gifu, Japan. He now lives and works in Paris. He has performed and exhibited worldwide including Australian Centre for the Moving Image, Melbourne; MIT, Boston; Centre Pompidou, Paris; Sónar Festival Barcelona; Tate Modern, London; Irish Museum of Modern Art, Dublin; Auditorium Parco della Musica, Roma; lCC, Tokyo; Art Beijing; Göteborg Biennale; Mutek Festival; and many other electronic music festivals and small DJ clubs.
+        </h6>  
     <div class="small-rule"></div>  
         <p>Test pattern presents flickering black and white imagery that floats and convulses in darkness on two screens, one on the floor and another floor to ceiling, in time with a stark, powerful and highly synchronised soundtrack. Through a real-time computer program audio signal patterns are converted into tightly synchronised barcode patterns on the screens. The velocity of the moving images is ultra-fast, some hundreds of frames per second, providing a totally immersive experience for visitors. The work provides a performance test for the audio and visual devices, as well as a response test for one’s perceptions.<br><span></span>
         Through a real–time computer program, test pattern converts audio signal patterns into tightly synchronised barcode patterns on screen. The velocity of the moving images is ultra-fast, some hundreds of frames per second, so that the work provides a performance test for the audio and visual devices, as well as a response test for the audience's perceptions.<br><span></span>
