--- a/static-haze.html
+++ b/static-haze.html
@@ -251,12 +251,14 @@ precision highp float;
         <p>Test pattern presents flickering black and white imagery that floats and convulses in darkness on two screens, one on the floor and another floor to ceiling, in time with a stark, powerful and highly synchronised soundtrack. Through a real-time computer program audio signal patterns are converted into tightly synchronised barcode patterns on the screens. The velocity of the moving images is ultra-fast, some hundreds of frames per second, providing a totally immersive experience for visitors. The work provides a performance test for the audio and visual devices, as well as a response test for one’s perceptions.<br><span></span>
         Through a real–time computer program, test pattern converts audio signal patterns into tightly synchronised barcode patterns on screen. The velocity of the moving images is ultra-fast, some hundreds of frames per second, so that the work provides a performance test for the audio and visual devices, as well as a response test for the audience's perceptions.<br><span></span>
         Japan’s leading electronic composer and visual artist Ryoji Ikeda focuses on the essential characteristics of sound itself and that of visuals as light by means of both mathematical precision and mathematical aesthetics. Ikeda has gained a reputation as one of the few international artists working convincingly across both visual and sonic media. He elaborately orchestrates sound, visuals, materials, physical phenomena and mathematical notions into immersive live performances and installations.    
-            <span class="small-rule"></span></p> 
-    </div>    
-        <h4>
-    <div class="h4-circle"></div>
+            <span class="small-rule"></span>
+     
+        
+<!--    <div class="h4-circle"></div>-->
         <span></span><b>Precedence,</b> Visual Inspiration.<br>
-        <span></span> Ryoji Ikeda, an electronic composer and a visual artist, was our maininspiration for Static Haze. In particular, we looked to his work ‘Test Pattern’ (2008), an audiovisual installation that interprets data and sound into a barcode pattern. Though Ikeda remains relatively quiet as to the purpose of his work, we came to understand Test Pattern as an exploration of the machine transitioning into different states of activities. The idea of states for the machine to transition through then became something that we wanted to explore for Static Haze, taking the experience of Ikeda’s test pattern as a precedent for how our machine should sound and look like when either asleep or awake.</h4>     
+        <span></span> Ryoji Ikeda, an electronic composer and a visual artist, was our maininspiration for Static Haze. In particular, we looked to his work ‘Test Pattern’ (2008), an audiovisual installation that interprets data and sound into a barcode pattern. Though Ikeda remains relatively quiet as to the purpose of his work, we came to understand Test Pattern as an exploration of the machine transitioning into different states of activities. The idea of states for the machine to transition through then became something that we wanted to explore for Static Haze, taking the experience of Ikeda’s test pattern as a precedent for how our machine should sound and look like when either asleep or awake.    
+    <span class="small-rule"></span></p>  
+    </div>  
         </div>
     </div> 
 </section> 
