--- a/index.html
+++ b/index.html
@@ -215,8 +215,9 @@
       </figure>    
   </article>  
     <div class="hero-caption">
+                <div class="h6-circle"></div>
         <h6>
-        Static Haze speculates on how the machine perceives and, in turn, communicates itself once woken up by the user during its state of rest. <a class="underline"  href="static-haze">Read more</a>
+        Static Haze speculates on how the machine perceives and, in turn, communicates itself once woken up by the user during its state of rest. <a class="underline"  href="static-haze">more info</a>
         </h6>
     </div> 
     <div class="mobile-letter">
@@ -305,12 +306,12 @@
     <div class="download">
         <div class="small-rule"></div>
 <!--        <p>Change text preview: <a class="underline" >Letter</a> | <a class="underline" >Word</a></p>-->
-        <div class="p-circle"></div><p>Request <a class="underline" href="mailto:hello@lukehoban.co.nz?Subject=Harmony Typeface">download</a></p>
+        <div class="h6-circle"></div><p>Request <a class="underline" href="mailto:hello@lukehoban.co.nz?Subject=Harmony Typeface">download</a></p>
         <div class="small-rule"></div></div>
     
     <div class="letterform-disclaimer">
         <h6>
-        We designed a typeface for this project which was a custom hybrid between Helvetica and Arial, an homage to the early system fonts from both Macintosh and Windows. It’s weights were designed so that the lighter it was, the more it resembled Helvetica, while the heavier it was, the more it resembled Arial.<br>
+        We designed a typeface for this project which was a custom hybrid between Helvetica and Arial, an homage to the early system fonts from both Macintosh and Windows. It’s weights were designed so that the lighter it was, the more it resembled Helvetica, while the heavier it was, the more it resembled Arial.<br><span></span>
 <!--        <div class="small-rule"></div>-->
             *Helvetica has been slightly edited to make sure the interpolation between the two fonts would function correctly. Small changes such as the tail from the lowercase ‘a’ was removed to ensure there was an equal amount of points as the Arial counterpart.</h6>
         <div class="small-rule"></div>
