--- a/static-haze.html
+++ b/static-haze.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		
-    <title>Static Haze</title>
+    <title>Folklore Futura</title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="content-language" content="en"/>
