--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     
 	<head>
 
-    <title>Fearful Harmony</title>
+    <title>Dense Earth</title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="content-language" content="en"/>
