--- a/ok-human.html
+++ b/ok-human.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		
-    <title>OK Human</title>
+    <title>Yonder Peruse</title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="content-language" content="en"/>
