--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="content-language" content="en"/>
-    <meta name="description" content="Fearful Harmony is an exploration of the relationship between designer and machine, speculating into the being of the latter as a means to delve into a different aesthetic and experience of our devices.">
-    <meta name="author" content="Alfred Hoi & Luke Hoban">
+    <meta name="description" content="Dense Journal is a project exploring how humans can live in regenerative and net positive ways for well-being of planet and people.">
+    <meta name="author" content="Dense Earth">
 
     <!-- Mobile -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -43,59 +43,7 @@
     </head>
     <body>
         
-<script id="shader" type="shader-code">
 
-        precision highp float;
-        
-            uniform vec2      mouse;
-            uniform vec2      resolution;
-            uniform float     time;
-            uniform vec2      speed;
-            uniform float     shift;
-            uniform sampler2D 	uSampler;
-            varying vec2 	  vTextureCoord;
-
-        float rand(vec2 n) {
-            return fract(cos(dot(n, vec2(12.9898, 4.1414))) * 43758.5453);
-        }
-
-        float noise(vec2 n) {
-            const vec2 d = vec2(0.0, 1.0);
-            vec2 b = floor(n), f = smoothstep(vec2(0.0), vec2(1.0), fract(n));
-            return mix(mix(rand(b), rand(b + d.yx), f.x), mix(rand(b + d.xy), rand(b + d.yy), f.x), f.y);
-        }
-
-        float fbm(vec2 n) {
-            float total = 0.0, amplitude = 1.0;
-            for (int i = 0; i < 4; i++) {
-                total += noise(n) * amplitude;
-                n += n;
-                amplitude *= 0.7;
-            }
-            return total;
-        }
-
-        void main() {
-            const vec3 c1 = vec3(4.1);
-            const vec3 c2 = vec3(2.0);
-            const vec3 c3 = vec3(1.4);
-            const vec3 c4 = vec3(0.10);
-            const vec3 c5 = vec3(4.5);
-            const vec3 c6 = vec3(0.9);
-
-            vec2 p = gl_FragCoord.xy * 0.375 / resolution.xx;
-
-            float q = fbm(p - (time + 0.7));
-
-            vec2 r = vec2(fbm(p + q + time + 1.0 * (((mouse.x/resolution.x)*0.1)) - p.x - p.y), fbm(p + q - time + 1.0 * (-(mouse.y/resolution.y)*0.1)));
-
-            vec3 c = mix(c1, c2, fbm(p + r)) + mix(c3, c4, r.x) - mix(c5, c6, r.y);
-            gl_FragColor = texture2D(uSampler, vTextureCoord);    
-            gl_FragColor = vec4(c * cos(shift * gl_FragCoord.y / resolution.y), .5);
-            gl_FragColor.xyz *= 0.5;
-        }
-
-</script>
 
 <div class="loading-screen">
         <div class="loading-heading">
@@ -125,13 +73,13 @@
 
         <div class="heading">
             <h1>
-            <a id="fearful-harmony"><span>F</span>earful <span>Ha</span>rmony</a>
+            <a id="fearful-harmony" href="/"><span>D</span>ense <span>Jo</span>urnal</a>
                 <div class="big-circle"></div>
                 <br>
-            <a id="static-haze" href="static-haze">Static <span>H</span>aze</a>
+            <a id="static-haze" href="superpotent">Super <span>P</span>otent</a>
                 <div class="big-circle2"></div>
                 <br>
-            <indent class="indent-big"><a id="ok-human" href="ok-human"><span>OK</span> Human</a></indent>
+            <indent class="indent-big"><a id="ok-human" href="yonder-peruse"><span>Yonder</span> Peruse</a></indent>
             <div class="big-circle3"></div>
             </h1>
         </div>
@@ -142,8 +90,10 @@
             <div class="menu-footer">
                 <div class="h6-circle"></div>
                 <h6>
-                Fearful Harmony is an exploration of the relationship between designer and machine, speculating into the being of the latter as a means to delve into a different aesthetic and experience of our devices.
-                <br><br>© 2017 <a class="underline" href="http://alfredhoi.com/" target="_blank">Alfred Hoi</a> &amp; <a class="underline" href="http://lukehoban.co.nz/" target="_blank">Luke Hoban</a>, All Rights Reserved.</h6>
+                    Dense Journal is a project exploring how humans can live in regenerative and climate net positive ways.</h6>
+                <h6>
+                <br>© 2021 <a class="underline" href="http://dense.earth/" target="_blank">Dense Earth</a> &amp; <a class="underline" href="http://ashercaplan.com/" target="_blank">Asher Caplan</a>, All Rights Reserved.</h6>
+          </div>  
             </div> 
             <div class="menu-close"><h6 id="menu-open" class="underline">Information</h6></div>
         </div>        
@@ -164,23 +114,23 @@
 <!--    <div class="rule2"></div>-->
     <div class="context-title">
         <p>
-        <b>Context</b><br>
+        <b>About</b><br>
         </p>
     </div>     
     <div class="visual-language-title">
         <p>
-        <b>Visual Language</b><br> 
+        <b>Transmedia/Worldbuilding</b><br> 
         </p>
     </div>
     <div class="visual-language-title-2">
         <p>
-        <b>Manifesto</b><span class="indent" style="position: absolute;">Experimental Jetset</span>
+        <b>Manifesto</b><span class="indent" style="position: absolute;">Experiments in Reciprocity</span>
         </p>
     </div>    
     <div class="rule"></div>
     <div class="context">
         <h6>
-        A manifesto exploring the aesthetic of the machine in a contemporary context. Written by Alfred Hoi and Luke Hoban, inspired by Experimental Jetset’s manifesto ‘Disrepresentation Now!’<br><br>
+        A working framework for exploring, testing, and designing around living close to the land in ways that give back more than we take.<br><br>
 <!--            <a id="menu-open" class="underline">Close</a>-->
         </h6>
     </div>     
@@ -340,10 +290,9 @@
     <div class="footer-credit">
     <div class="p-circle"></div>
     <h6>
-        Fearful Harmony is both an exploration of the relationship between designer and machine as a means to delve into a different aesthetic and experience of our devices.</h6>
-          <h6><br>
-        Thank you to everyone who was involved and helped on the way. A special acknowledgement to Lee Jensen and Tristam Sparks for the guidance and mentorship throughout the year. 
-        <br><br>© 2017 <a class="underline" href="http://alfredhoi.com/" target="_blank">Alfred Hoi</a> &amp; <a class="underline" href="http://lukehoban.co.nz/" target="_blank">Luke Hoban</a>, All Rights Reserved.</h6>
+        Dense Journal is a project exploring how humans can live in regenerative and climate net positive ways.</h6>
+          <h6>
+            <br>© 2021 <a class="underline" href="http://dense.earth/" target="_blank">Dense Earth</a> &amp; <a class="underline" href="http://ashercaplan.com/" target="_blank">Asher Caplan</a>, All Rights Reserved.</h6>
           </div>        
         <h1 class="footer-header" id="hover-arrow"><span class="footer-link">BACK<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1067.03 1067.03"><defs><style>.cls-1{fill:none;}.cls-2{fill:#000000;}</style></defs><title>arrow_3</title><g id="Layer_2" data-name="Layer 2"><g id="containter"><rect class="cls-1" width="1067.03" height="1067.03"/></g><g id="arrow-tail"><path class="cls-2" d="M564.65,306H391.11V244.73H564.65Z"/></g><g id="arrow-body"><path class="cls-2" d="M158,578.23H568.15c93.1,0,150.43-46.08,150.43-136.1,0-92.08-57.33-136.11-150.43-136.11H533.56V244.73h45.85c123.78,0,208.64,70.55,208.64,197.4,0,125.82-84.86,197.39-208.64,197.39H158Z"/></g><g id="arrow-tip"><polygon class="cls-2" points="511.3 578.23 511.3 639.52 198.77 639.52 198.77 734.7 31 608.87 198.77 483.05 198.77 578.23 511.3 578.23"/></g></g></svg></span>
         </h1>
