--- a/superpotent.html
+++ b/superpotent.html
@@ -209,11 +209,10 @@
     <div class="footer-credit">
     <div class="p-circle"></div>
     <h6>
-        Fearful Harmony is both an exploration of the relationship between designer and machine as a means to delve into a different aesthetic and experience of our devices.</h6>
-          <h6><br>
-        Thank you to everyone who was involved and helped on the way. A special acknowledgement to Lee Jensen and Tristam Sparks for the guidance and mentorship throughout the year. 
-        <br><br>© 2017 <a class="underline" href="http://alfredhoi.com/" target="_blank">Alfred Hoi</a> &amp; <a class="underline" href="http://lukehoban.co.nz/" target="_blank">Luke Hoban</a>, All Rights Reserved.</h6>
-          </div>        
+        Dense Journal is a project exploring how humans can live in regenerative and climate net positive ways.</h6>
+          <h6>
+            <br>© 2021 <a class="underline" href="http://dense.earth/" target="_blank">Dense Earth</a> &amp; <a class="underline" href="http://ashercaplan.com/" target="_blank">Asher Caplan</a>, All Rights Reserved.</h6>
+          </div>         
         <h1 class="footer-header" id="hover-arrow"><span class="footer-link">BACK<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1067.03 1067.03"><defs><style>.cls-1{fill:none;}.cls-2{fill:#000000;}</style></defs><title>arrow_3</title><g id="Layer_2" data-name="Layer 2"><g id="containter"><rect class="cls-1" width="1067.03" height="1067.03"/></g><g id="arrow-tail"><path class="cls-2" d="M564.65,306H391.11V244.73H564.65Z"/></g><g id="arrow-body"><path class="cls-2" d="M158,578.23H568.15c93.1,0,150.43-46.08,150.43-136.1,0-92.08-57.33-136.11-150.43-136.11H533.56V244.73h45.85c123.78,0,208.64,70.55,208.64,197.4,0,125.82-84.86,197.39-208.64,197.39H158Z"/></g><g id="arrow-tip"><polygon class="cls-2" points="511.3 578.23 511.3 639.52 198.77 639.52 198.77 734.7 31 608.87 198.77 483.05 198.77 578.23 511.3 578.23"/></g></g></svg></span>
         </h1>
       </footer>
