--- a/yonder-peruse.html
+++ b/yonder-peruse.html
@@ -85,7 +85,7 @@
                 <h6>
                     <div id="fearful-harmony">Dense Journal</div> is a project exploring how humans can live in regenerative and climate net positive ways.</h6>
                 <h6>
-                <br>© 2021 <a class="underline" href="http://dense.earth/" target="_blank">Dense Earth</a> &amp; <a class="underline" href="http://ashercaplan.com/" target="_blank">Asher Caplan</a>, All Rights Reserved.</h6>
+                <br>© 2021 <a class="underline" href="http://dense.earth/" target="_blank">Dense Earth</a>, All Rights Reserved.</h6>
           </div> 
             <div class="menu-close"><h6 id="menu-open" class="underline"><a></a>Close</h6></div>
         </div>        
@@ -100,9 +100,9 @@
 
 <section class="rationale">
     <div class="static-haze"> 
-    <h6><b>Dense Journal </b>Dense Earth</h6>      
-        <h3 class="top-header"><indent></indent>Superpotent<br> Experiment <span>1</span>, Food<br></h3>
-        <h4 class="sub-heading">“Natural nutrient potency in local superfoods.”</h4>   
+    <h6><b>Dense Journal </b>Stewarding a Dense Earth</h6>      
+        <h3 class="top-header"><indent></indent>Yonder Peruse<br> Resource <span> 1</span>, Books<br></h3>
+        <h4 class="sub-heading">“Recommended reading”</h4>   
     <div class="ryoji-ikeda-body-copy">
 <!--
         <div class="static-haze-rule"></div>
@@ -139,9 +139,9 @@
     </div>
     <div class="ryoji-ikeda-body-copy2"> 
         <div class="small-rule"></div> 
-            <h6><b>Superpotent</b><br></h6>
+            <h6><b>Yonder Peruse</b><br></h6>
         <div class="small-rule"></div>    
-        <h6>“Superpotent was a baking project using locally sourced, zero waste ingredients and diverse whole grains.”</h6>
+        <h6>“Books about living close to the land, with nature. In the age of the anthropocene.”</h6>
         <div class="small-rule"></div>
     </div>
     <div class="static-haze-credit">
@@ -225,7 +225,7 @@
     <div class="footer-credit">
     <div class="p-circle"></div>
    <h6>
-        Dense Journal is a project exploring how humans can live in regenerative and climate net positive ways.</h6>
+        <div id="fearful-harmony">Dense Journal</div> is a project exploring how humans can live in regenerative and climate net positive ways.</h6>
           <h6>
             <br>© 2021 <a class="underline" href="http://dense.earth/" target="_blank">Dense Earth</a> &amp; <a class="underline" href="http://ashercaplan.com/" target="_blank">Asher Caplan</a>, All Rights Reserved.</h6>
           </div>        
