--- a/superpotent.html
+++ b/superpotent.html
@@ -78,7 +78,7 @@
             <div class="menu-footer">
                 <div class="h6-circle"></div>
                 <h6>
-                    Dense Journal is a project exploring how humans can live in regenerative and climate net positive ways.</h6>
+                    <div id="fearful-harmony">Dense Journal</div> is a project exploring how humans can live in regenerative and climate net positive ways.</h6>
                 <h6>
                 <br>© 2021 <a class="underline" href="http://dense.earth/" target="_blank">Dense Earth</a> &amp; <a class="underline" href="http://ashercaplan.com/" target="_blank">Asher Caplan</a>, All Rights Reserved.</h6>
           </div> 
@@ -99,8 +99,8 @@
         
     <section class="rationale">    
         <div class="static-haze">          
-            <h6><b>Fearful Harmony </b>Alfred Hoi &amp; Luke Hoban</h6>      
-            <h3 class="top-header"><indent></indent>OK Human<br>Experiment 2, Interactive<br></h3>
+            <h6><b>Dense Journal </b>Stewarding a Dense Earth</h6>      
+            <h3 class="top-header"><indent></indent>Superpotent<br>Experiment 1, Food<br></h3>
             <h4 class="sub-heading">“Speculating the machine’s interaction with the user”</h4>            
             <div class="ryoji-ikeda-body-copy">
                 <h5>
@@ -209,9 +209,9 @@
     <div class="footer-credit">
     <div class="p-circle"></div>
     <h6>
-        Dense Journal is a project exploring how humans can live in regenerative and climate net positive ways.</h6>
+        <div id="fearful-harmony">Dense Journal</div> is a project exploring how humans can live in regenerative and climate net positive ways.</h6>
           <h6>
-            <br>© 2021 <a class="underline" href="http://dense.earth/" target="_blank">Dense Earth</a> &amp; <a class="underline" href="http://ashercaplan.com/" target="_blank">Asher Caplan</a>, All Rights Reserved.</h6>
+            <br>© 2021 <a class="underline" href="http://dense.earth/" target="_blank">Dense Earth</a>, All Rights Reserved.</h6>
           </div>         
         <h1 class="footer-header" id="hover-arrow"><span class="footer-link">BACK<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1067.03 1067.03"><defs><style>.cls-1{fill:none;}.cls-2{fill:#000000;}</style></defs><title>arrow_3</title><g id="Layer_2" data-name="Layer 2"><g id="containter"><rect class="cls-1" width="1067.03" height="1067.03"/></g><g id="arrow-tail"><path class="cls-2" d="M564.65,306H391.11V244.73H564.65Z"/></g><g id="arrow-body"><path class="cls-2" d="M158,578.23H568.15c93.1,0,150.43-46.08,150.43-136.1,0-92.08-57.33-136.11-150.43-136.11H533.56V244.73h45.85c123.78,0,208.64,70.55,208.64,197.4,0,125.82-84.86,197.39-208.64,197.39H158Z"/></g><g id="arrow-tip"><polygon class="cls-2" points="511.3 578.23 511.3 639.52 198.77 639.52 198.77 734.7 31 608.87 198.77 483.05 198.77 578.23 511.3 578.23"/></g></g></svg></span>
         </h1>
