--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <div class="heading">
             <h1>
-            <a id="fearful-harmony" href="/"><span>D</span>ense <span>Jo</span>urnal</a>
+            <a id="fearful-harmony" href="index"><span>D</span>ense <span>Jo</span>urnal</a>
                 <div class="big-circle"></div>
                 <br>
             <a id="static-haze" href="superpotent">Super <span>P</span>otent</a>
